# Web-Scrapying

./: README.md  pyproject.toml
smartmaple/: main.py  scrapy.cfg
smartmaple/smartmaple/: items.py  middlewares.py  pipelines.py  settings.py
smartmaple/smartmaple/spiders/: kitapsepeti.py  kitapyurdu.py
