[tool.poetry]
name = "smartmapleproject"
version = "0.1.0"
description = ""
authors = ["tayyipkorkmaz <typkmz@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scrapy = "^2.9.0"
pymongo = "^4.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
